[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gakido"
version = "0.1.2"
description = "High-performance CPython HTTP client with browser impersonation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "h2>=4.3.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "brotli>=1.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]

[project.optional-dependencies]
h3 = [
    "aioquic>=1.2.0",
]
dev = [
    "aioquic>=1.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-material>=9.7.1",
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
    "pytest-asyncio>=1.3.0",
    "pytest-pretty>=1.3.0",
    "pytest-picked>=0.5.1",
    "pytest-timeout>=2.4.0",
    "pytest-instafail>=0.5.0",
    "pytest-codspeed>=4.2.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.setuptools]
packages = {find = {include = ["gakido*"]}}
ext-modules = [
    {name = "gakido.gakido_core", sources = ["gakido/core.c"]}
]

[tool.cibuildwheel]
# Build for Python 3.11+
build = "cp311-* cp312-* cp313-*"
# Skip 32-bit builds and musl
skip = "*-win32 *-manylinux_i686 *-musllinux_*"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=gakido --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
source = ["gakido"]
omit = [
    "gakido/core.c",
    "gakido/gakido_core*",
    "examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "gakido/core.c",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
